[project]
name = "langchain-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.0",
    "langchain[faiss]>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community>=0.4",
    "jupyter>=1.0.0",
    "langgraph-cli[inmem]>=0.4.0",
    "langchain-mcp-adapters",
    "langchain-deepseek>=1.0.1",
    "ipykernel>=7.1.0",
    "pypdf>=6.4.0",
    "beautifulsoup4>=4.14.2",
    "langchain-text-splitters>=1.0.0",
    "chromadb>=1.3.5",
    "rank-bm25>=0.2.2",
    "langchain-chroma>=1.0.0",
    "langchain-huggingface>=1.1.0",
    "sentence-transformers>=5.1.2",
    "langchain-cohere>=0.5.0",
    "langchain-faiss>=0.1.1",
    "faiss-cpu>=1.13.0",
    "chainlit>=2.9.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
